// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`MFT refetch query with Location as node 1`] = `
{
  "node": {
    "__typename": "Location",
    "name": {
      "__typename": "Name",
      "value": "Mixing Line",
    },
    "tracking": {
      "edges": [
        {
          "node": {
            "displayName": {
              "name": {
                "value": "Production",
              },
            },
            "fsm": {
              "active": null,
              "transitions": {
                "edges": [
                  {
                    "node": {
                      "displayName": {
                        "name": {
                          "value": "Production",
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      ],
    },
  },
}
`;

exports[`MFT refetch query with Task as node 1`] = `
{
  "node": {
    "__typename": "Task",
    "displayName": {
      "__typename": "DisplayName",
      "name": {
        "__typename": "DynamicString",
        "value": "Production",
      },
    },
    "fsm": {
      "__typename": "TaskStateMachine",
      "active": null,
      "transitions": {
        "edges": [
          {
            "node": {
              "displayName": {
                "name": {
                  "value": "Production",
                },
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`MFT transition mutations start production 1`] = `
{
  "advance": {
    "__typename": "Task",
    "fsm": {
      "__typename": "TaskStateMachine",
      "active": {
        "displayName": {
          "name": {
            "value": "Production",
          },
        },
      },
      "transitions": {
        "edges": [
          {
            "node": {
              "displayName": {
                "name": {
                  "value": "Unplanned Downtime",
                },
              },
            },
          },
          {
            "node": {
              "displayName": {
                "name": {
                  "value": "Planned Downtime",
                },
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`MFT transition mutations production -> planned downtime 1`] = `
{
  "advance": {
    "__typename": "Task",
    "fsm": {
      "__typename": "TaskStateMachine",
      "active": {
        "displayName": {
          "name": {
            "value": "Planned Downtime",
          },
        },
      },
      "transitions": {
        "edges": [],
      },
    },
  },
}
`;

exports[`MFT transition mutations end planned downtime -> in production 1`] = `
{
  "advance": {
    "__typename": "Task",
    "fsm": {
      "__typename": "TaskStateMachine",
      "active": {
        "displayName": {
          "name": {
            "value": "Production",
          },
        },
      },
      "transitions": {
        "edges": [
          {
            "node": {
              "displayName": {
                "name": {
                  "value": "Unplanned Downtime",
                },
              },
            },
          },
          {
            "node": {
              "displayName": {
                "name": {
                  "value": "Planned Downtime",
                },
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`MFT transition mutations start unplanned downtime 1`] = `
{
  "advance": {
    "__typename": "Task",
    "fsm": {
      "__typename": "TaskStateMachine",
      "active": {
        "displayName": {
          "name": {
            "value": "Unplanned Downtime",
          },
        },
      },
      "transitions": {
        "edges": [],
      },
    },
  },
}
`;

exports[`MFT transition mutations (invalid) start planned downtime 1`] = `
[
  [GraphQLError: Task 'd29ya3RlbXBsYXRlOndvcmstdGVtcGxhdGVfYzJmZGRiN2EtMTdmNC00YjQ5LWE3NDQtODUyOGQ2ZWU0NGM0' (worktemplate:work-template_c2fddb7a-17f4-4b49-a744-8528d6ee44c4) is not a valid advancement of FSM 'd29ya3RlbXBsYXRlOndvcmstdGVtcGxhdGVfMWJmMzFjZDUtOGZjMi00N2IxLWEyOGYtZTRiYzU1MTNlMDI4' (worktemplate:work-template_1bf31cd5-8fc2-47b1-a28f-e4bc5513e028)],
]
`;

exports[`MFT transition mutations end unplanned downtime -> in production 1`] = `
{
  "advance": {
    "__typename": "Task",
    "fsm": {
      "__typename": "TaskStateMachine",
      "active": {
        "displayName": {
          "name": {
            "value": "Production",
          },
        },
      },
      "transitions": {
        "edges": [
          {
            "node": {
              "displayName": {
                "name": {
                  "value": "Unplanned Downtime",
                },
              },
            },
          },
          {
            "node": {
              "displayName": {
                "name": {
                  "value": "Planned Downtime",
                },
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`MFT transition mutations stop production -> idle 1`] = `
{
  "advance": {
    "__typename": "Task",
    "fsm": {
      "__typename": "TaskStateMachine",
      "active": null,
      "transitions": {
        "edges": [
          {
            "node": {
              "displayName": {
                "name": {
                  "value": "Production",
                },
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`MFT entrypoint query 1`] = `
{
  "trackables": {
    "__typename": "TrackableConnection",
    "edges": [
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Mixing Line",
          },
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Production",
                    },
                  },
                  "fsm": {
                    "active": null,
                    "transitions": {
                      "edges": [
                        {
                          "node": {
                            "displayName": {
                              "name": {
                                "value": "Production",
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Fill Line",
          },
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Production",
                    },
                  },
                  "fsm": {
                    "active": null,
                    "transitions": {
                      "edges": [
                        {
                          "node": {
                            "displayName": {
                              "name": {
                                "value": "Production",
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Assembly Line",
          },
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Production",
                    },
                  },
                  "fsm": {
                    "active": null,
                    "transitions": {
                      "edges": [
                        {
                          "node": {
                            "displayName": {
                              "name": {
                                "value": "Production",
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Cartoning Line",
          },
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Production",
                    },
                  },
                  "fsm": {
                    "active": null,
                    "transitions": {
                      "edges": [
                        {
                          "node": {
                            "displayName": {
                              "name": {
                                "value": "Production",
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Packaging Line",
          },
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Production",
                    },
                  },
                  "fsm": {
                    "active": null,
                    "transitions": {
                      "edges": [
                        {
                          "node": {
                            "displayName": {
                              "name": {
                                "value": "Production",
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
  },
}
`;
